--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "webdb-iii-challenge",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "server": "nodemon index.js"
   },
